fixed overflow hidden issue fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,7 @@ body {
 .sidebar_and_content{
     display:flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     flex-direction: row;
     width: 100%;
     height: 100vh;
@@ -62,7 +62,7 @@ body {
     padding-bottom: 10px;
 }
 
-#input{
+.input{
     margin-bottom: 5px;
     box-sizing: border-box;
     padding: 5px;
@@ -70,7 +70,7 @@ body {
     border: 2px solid black;
 }
 
-#generate{
+.generate{
     width: 30%;
     cursor: pointer;
     padding-top: 5px;
@@ -82,10 +82,10 @@ body {
 .floorSection {
     display: flex;
     width: 60%;
-    height: 100%;
+    height: fit-content;
     margin: 30px auto;
     flex-wrap: wrap;
-    align-content: flex-end;
+    /* align-content: flex-end; */
 }
 
 .floors {
